# iori

./: .gitignore  Cargo.toml  README.md  flake.nix  save.sh  test.m3u8
.cargo/: config.toml
.github/workflows/: build.yaml  release.yaml
.versions/: shiori
crates/iori/: Cargo.toml  build.rs
crates/iori/examples/: dash.rs  dash_archive.rs  dash_live.rs  live_dash.rs  pipe.rs  webrtc.rs
crates/iori/src/: cache.rs  common.rs  consumer.rs  dash.rs  decrypt.rs  error.rs  fetch.rs  hls.rs  lib.rs  merge.rs  segment.rs  util.rs
crates/iori/src/cache/: file.rs  memory.rs  opendal.rs
crates/iori/src/consumer/: file.rs  pipe.rs
crates/iori/src/dash/: archive.rs  live.rs  live2.rs  mod.rs  segment.rs  template.rs  url.rs
crates/iori/src/dash/live/: clock.rs  selector.rs  timeline.rs
crates/iori/src/download/: mod.rs  parallel.rs  sequencial.rs
crates/iori/src/downloader/: parallel.rs  sequencial.rs
crates/iori/src/hls/: archive.rs  core.rs  decrypt.rs  live.rs  mod.rs  segment.rs  source.rs  utils.rs
crates/iori/src/merge/: auto.rs  concat.rs  ffmpeg.rs  ffmpeg_cli.rs  mkvmerge.rs  mod.rs  pipe.rs  skip.rs  utils.rs
crates/iori/src/raw/: http.rs  mod.rs
crates/iori/src/util/: http.rs  mix.rs  mod.rs  ordered_stream.rs  path.rs  range.rs
crates/iori/src/webrtc/: mod.rs  writer.rs
crates/iori/tests/: dash.rs  lib.rs  segment.rs  source.rs  streaming.rs
crates/iori/tests/dash/: dash_mpd_rs.rs  mod.rs  static.rs
crates/iori/tests/downloader/: parallel.rs
crates/iori/tests/fixtures/: a2d-tv.mpd
crates/iori/tests/fixtures/dash/dash-mpd-rs/: dash-testcases-5b-1-thomson.mpd
crates/iori/tests/fixtures/dash/static/: lemino-sokosaku-235.mpd
crates/iori/tests/fixtures/hls/m3u8-rs/: Readme.md  mediaplaylist-byterange.m3u8
crates/iori/tests/fixtures/hls/rfc8216/: 8-1-simple-media-playlist.m3u8  8-4-master-playlist.m3u8  8-6-master-playlist-with-alternative-audio.m3u8  8-7-master-playlist-with-alternative-video.m3u8
crates/iori/tests/hls/: m3u8_rs.rs  mod.rs  rfc8216.rs
crates/nicolive/: Cargo.toml  build.rs
crates/nicolive/src/: danmaku.rs  inspect.rs  lib.rs  model.rs  program.rs  source.rs  utils.rs  watch.rs  xml2ass.rs
crates/nicolive/test/danmaku/ass/: 548omake.ass  548本篇.ass
crates/shiori-plugin/src/: lib.rs
crates/showroom/: Cargo.toml
crates/showroom/src/: constants.rs  inspect.rs  lib.rs  model.rs
crates/ssa/: CHANGELOG.md  Cargo.toml  Readme.md
crates/ssa/benches/: decrypt.rs
crates/ssa/src/: constant.rs  error.rs  lib.rs
crates/ssa/test/fixtures/ac3/: script.sh
crates/ssa/test/fixtures/eac3/: script.sh
crates/ssa/tests/: decrypt.rs
crates/ssa/tests/fixtures/: .gitignore
crates/ssa/tests/fixtures/ac3/: script.sh  segment-0.ts  segment-0.ts.dec
crates/ssa/tests/fixtures/eac3/: segment-0.ts  segment-0.ts.dec
crates/uri-match/: Cargo.toml
crates/uri-match/src/: error.rs  lib.rs
crates/widevine/: Cargo.toml  build.rs
crates/widevine/src/: base64.rs  constants.rs  device.rs  key.rs  lib.rs  pssh.rs  session.rs  traits.rs
examples/: pipe.rs
plugins/shiori-plugin/: Cargo.toml
plugins/shiori-plugin/src/: extism.rs  lib.rs
plugins/showroom-plugin/: Cargo.toml  README.md
plugins/showroom-plugin/src/: lib.rs  model.rs
scripts/: linker-wrapper.sh
src/: consumer.rs  downloader.rs  error.rs  hls.rs  lib.rs
src/consumer/: file.rs  pipe.rs  stream.rs
src/downloader/: parallel.rs  sequencial.rs
src/hls/: archive.rs  core.rs  decrypt.rs  live.rs  utils.rs
