[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Yesterday17 <mmf@mmf.moe>"]
repository = "https://github.com/Yesterday17/iori"
license = "Apache-2.0"

[workspace.dependencies]
iori = { path = "crates/iori" }
iori-nicolive = { path = "crates/nicolive" }
iori-ssa = { path = "crates/ssa" }

regex = "1.9.3"
tokio = { version = "1", features = ["signal", "process", "net"] }

fake_user_agent = "0.2.1"
anyhow = "1.0"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }

# A decompression error was fixed in 0.12.11
reqwest = { version = "^0.12.11", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
