[workspace]
members = ["bin/*", "crates/*", "plugins/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Yesterday17 <mmf@mmf.moe>"]
repository = "https://github.com/Yesterday17/iori"
license = "Apache-2.0"

[workspace.dependencies]
iori = { path = "crates/iori" }
iori-ssa = { path = "crates/ssa" }

iori-nicolive = { path = "crates/nicolive" }
iori-showroom = { path = "crates/showroom" }

shiori-plugin = { path = "plugins/shiori-plugin" }

regex = "1.9.3"
base64 = "0.22.1"
tokio = { version = "1", features = ["signal", "process", "net"] }

fake_user_agent = "0.2.1"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }

# A decompression error was fixed in 0.12.11
reqwest = { version = "^0.12.11", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
    "socks",
    "cookies",
] }
clap = { version = "4.5.34", features = ["derive", "env"] }

async-recursion = "1.1.1"

rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

dash-mpd = { version = "0.18", default-features = false, features = ["scte35"] }
