[package]
name = "iori"
version = "0.0.1"
description = "A brand new m3u8 stream downloader"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iori-ssa.workspace = true

async-recursion.workspace = true
log.workspace = true
tracing.workspace = true
m3u8-rs = { git = "https://github.com/Yesterday17/m3u8-rs.git" }
reqwest.workspace = true
tokio.workspace = true

aes.workspace = true
cbc.workspace = true
block-buffer = "0.10.4"
hex = "0.4.3"
mp4decrypt = "0.4.2"
tempfile = "3"
rand = "0.8.5"
thiserror = "1.0"
url = { version = "2.5.0", features = ["serde"] }
dash-mpd.workspace = true
regex.workspace = true
bytes = "1.6.0"
serde = { workspace = true, features = ["derive"] }
chrono = "0.4"
shlex = "1.3.0"
which = "7.0.2"
reqwest_cookie_store = "0.8.0"
serde_json.workspace = true
tokio-util = { version = "0.7.15", features = ["io"] }
futures = "0.3.31"
opendal = { version = "0.53.1", optional = true }
rsmpeg = { version = "0.15.2", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
command-fds = { version = "0.3.0", features = ["tokio"] }

[features]
default = ["ffmpeg"]
opendal = ["dep:opendal", "tokio-util/compat"]
opendal-fs = ["opendal/services-fs"]
opendal-s3 = ["opendal/services-s3"]
ffmpeg = ["dep:rsmpeg"]
ffmpeg-link-system = ["rsmpeg/link_system_ffmpeg"]

[dev-dependencies]
anyhow.workspace = true
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
wiremock = "0.6.3"

[[example]]
name = "pipe"
required-features = ["tokio/full"]
