[package]
name = "iori-nicolive"
version = "0.0.1"

edition.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
fake_user_agent.workspace = true
iori.workspace = true

regex.workspace = true
tokio.workspace = true
once_cell.workspace = true

url = "2.4.1"
html-escape = "0.2.13"
tokio-tungstenite = { version = "0.20.0", features = [
    "rustls-tls-webpki-roots",
] }
futures-util = { version = "0.3.30", features = ["futures-sink"] }
parking_lot = "0.12.1"
shlex = "1.3.0"

prost = "0.13"
prost-types = "0.13"
chrono = "0.4.38"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
prost-build = "0.13.3"
