[package]
name = "iori-showroom"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fake_user_agent.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

shiori-plugin.workspace = true
regex.workspace = true

[dev-dependencies]
tokio.workspace = true
