[package]
name = "iori-ssa"
description = "Decrypt MPEG-TS encrypted using SAMPLE-AES."
version = "0.2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
cbc = "0.1.2"
memchr = "2.7.4"
mpeg2ts = "0.3.1"

thiserror = "1.0"
log.workspace = true
